# lfml-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml
examples/lfml-static-site/: Cargo.toml
examples/lfml-static-site/src/: main.rs  meta.rs
lfml/: Cargo.toml
lfml-escape/: Cargo.toml
lfml-escape/src/: lib.rs
lfml-html5/: Cargo.toml
lfml-html5/src/: lib.rs
lfml-macros/: Cargo.toml
lfml-macros/src/: attrs.rs  derive.rs  html.rs  lib.rs  parse_lfml.rs  spread.rs
lfml-macros/src/html/: generate.rs  parse.rs  syntax.rs
lfml-macros/src/spread/: generate.rs  parse.rs  syntax.rs
lfml/src/: integrations.rs  lib.rs  types.rs
lfml/src/types/: attrs.rs  markup.rs
lfml/tests/: attrs.rs  derive_raw_attrs.rs  lib.rs
lfml/tests/derive/: enum.rs  mod.rs  raw_attrs.rs  struct.rs
lfml/tests/html/: attrs.rs  block.rs  embed.rs  interpolate.rs  literal.rs  mod.rs  shorthand.rs  spread.rs
lfml/tests/html/embed/: struct.rs
lfml/tests/html/interpolate/: attrs.rs  slots.rs
lfml/tests/html/spread/: enum.rs  struct.rs
lfml/tests/spread/: struct.rs
