[package]
name = "lfml-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lfml-escape = { path = "../lfml-escape" }
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits", "parsing"] }

[lib]
proc-macro = true
