[package]
name = "lfml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lfml-macros = { path = "../lfml-macros" }
lfml-escape = { path = "../lfml-escape" }
lfml-html5 = { path = "../lfml-html5" }
itoa = "1.0.9"
axum-core = { version = "0.4.1", optional = true }
http = { version = "1.0.0", optional = true}

[features]
default = ["axum"]
axum = ["axum-core", "http"]
