[package]
name = "lfml"
description = "template engine for rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lfml-macros = "0.1.0"
lfml-escape = "0.1.0"
lfml-html5 = "0.1.0"
itoa = "1.0.9"
axum-core = { version = "0.4.1", optional = true }
http = { version = "1.0.0", optional = true}

[features]
default = ["axum"]
axum = ["axum-core", "http"]
